@@ -5,6 +5,7 @@ Version 1.0.10
 * Fix fog bulb density formula.
 * Fix electricity effect crashing 64-bit version of the engine.
 * Fix clockwork beetle activation crashing the game.
+* Fix corrupted vehicle positions after savegame reload.
 
 Version 1.0.9
 =============
